From 4426115 (scalar):
=====================

(*) Update tests/conftest.py for polarimetric case
(*) Update tests/test_vectorInvariants.py for polarimetric case

From 5b40c36 (scalar):
=====================

(*) Add ClosureInvariants/scalarInvariants.py to repo 

From d39e16b (main):
===================

In ClosureInvariants/vectorInvariants.py,

(*) Add function corrupt_visibilities() with docstring
(*) Update function header and docstring of advariant()

In ClosureInvariants/tests/conftest.py,

(*) Add pytest fixture for complex_gains

In ClosureInvariants/tests/test_vectorInvariants.py,

(*) Add test_invariance()

From 4ccc0db (main):
===================

In ClosureInvariants/vectorInvariants.py,

(*) Add function remove_scaling_factor_minkowski_dots() with docstring

In ClosureInvariants/tests/conftest.py,

(*) Add pytest fixture for minkowski_dots_scaling_factor_removed

In ClosureInvariants/tests/test_vectorInvariants.py,

(*) Add test_remove_scaling_factor_minkoski_dots()

From ddab370 (main):
===================

In ClosureInvariants/vectorInvariants.py,

(*) Add function complete_minkowski_dots() with docstring

In ClosureInvariants/tests/conftest.py,

(*) Add pytest fixture for complete_minkowski_dots

In ClosureInvariants/tests/test_vectorInvariants.py,

(*) Add test_complete_minkowski_dots()

From 5535f27 (main):
===================

In ClosureInvariants/tests/test_vectorInvariants.py,

(*) In test_minkowski_dot_products(), test expected shapes

From 70be752 (main):
===================

In ClosureInvariants/vectorInvariants.py,

(*) Add function minkowski_dot() with docstring

In ClosureInvariants/tests/conftest.py,

(*) Add pytest fixture for minkowski_dot_products

In ClosureInvariants/tests/test_vectorInvariants.py,

(*) Add test_minkowski_dot_products()

From bc4770f (main):
===================

(*) Add .gitignore to repository

From ac2f0c0 (main):
===================

(*) Move changes.txt to the parent folder